2013-12-02 Ganesh Gopalasubramanian  <Ganesh.Gopalasubramanian@amd.com>

	* loop-unroll.c (decide_unroll_constant_iterations): Check macro 
	TARGET_LOOP_UNROLL_ADJUST while deciding unroll factor.

2013-12-01  Eric Botcazou  <ebotcazou@adacore.com>

	* config/i386/winnt.c (i386_pe_asm_named_section): Be prepared for an
	identifier node.

2013-12-01  Bernd Edlinger  <bernd.edlinger@hotmail.de>

	* expr.c (emit_group_store): Fix off-by-one BITFIELD_END argument.

2013-11-30  Paulo Matos  <pmatos@broadcom.com>
	    Eric Botcazou  <ebotcazou@adacore.com>

	* combine.c (reg_nonzero_bits_for_combine): Apply mask transformation
	as applied to nonzero_sign_valid when last_set_mode has less precision
	than mode.

2013-11-30  Tobias Burnus  <burnus@net-b.de>

	PR sanitizer/59275
	* doc/invoke.texi (-fsanitize=address,leak): Mention the associated
	environment variable and link to a list with flags.
	(-fsanitize=thread): Ditto and update link.

2013-11-29  Vladimir Makarov  <vmakarov@redhat.com>

	PR rtl-optimization/59340
	* lra.c (check_rtl): Use recog_memoized instead of insn_invalid_p.

	Revert
	2013-11-20  Robert Suchanek  <Robert.Suchanek@imgtec.com>

	* lra.c (lra): Set lra_in_progress before check_rtl call.
	* recog.c (insn_invalid_p): Add !lra_in_progress to prevent
	adding clobber regs when LRA is running.

2013-11-29  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	PR target/59289
	* config/arm/arm.c (cortexa15_extra_costs): Adjust costs.

2013-11-29  Richard Biener  <rguenther@suse.de>

	PR middle-end/59208
	* tree-ssa-operands.h (fini_ssa_operands, verify_ssa_operands,
	free_stmt_operands, update_stmt_operands): Add struct function
	argument.
	* tree-ssa-operands.c: Remove uses of cfun, propagate struct
	function argument from fini_ssa_operands, verify_ssa_operands,
	free_stmt_operands and update_stmt_operands everywhere.
	* tree-ssanames.h (release_ssa_name_fn): New.
	(release_ssa_name): Inline wrapper around release_ssa_name_fn.