@@ -1,3 +1,8 @@
+2013-12-02  Yvan Roux  <yvan.roux@linaro.org>
+
+	* config/arm/arm.c (arm_preferred_reload_class): Only return LO_REGS
+	when rclass is GENERAL_REGS.
+
 2013-12-02 Ganesh Gopalasubramanian  <Ganesh.Gopalasubramanian@amd.com>
 
 	* loop-unroll.c (decide_unroll_constant_iterations): Check macro 
